# socketcan

./: CMakeLists.txt  LICENSE  README.md  install_dependencies.sh
include/socketcan/: socketcan.h
src/: socketcan.cpp
tests/: CMakeLists.txt  receive.cpp  test_socketcan.cpp  transmit.cpp
